eu-central-1/elastic-ips.tf
# resource "aws_eip" "staging" {
#     instance = "${aws_instance.staging_instance.id}"
#     vpc      = true
# }
